# Copyright (C) 1992 - 2001, 2012 Free Software Foundation, Inc.
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 1, or (at your option)
# any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#

EXTRA_DIST = attach-process.exp count-record.c count-record.exp		\
	demangle.cpp demangle.exp demangle.h demangle-lib.cpp		\
	libdl-simple.c libdl-simple.exp libdl-simple-lib.c		\
	print-instruction-pointer.c print-instruction-pointer.exp	\
	time-record.c time-record-T.exp time-record-tt.exp		\
	time-record-ttt.exp trace-clone.c trace-clone.exp		\
	trace-exec.exp trace-fork.c trace-fork.exp			\
	trace-irelative.exp wchar.exp

CLEANFILES = *.o *.so *.log *.sum *.ltrace setval.tmp attach-process	\
	count-record demangle print-instruction-pointer time-record-T	\
	time-record-tt time-record-ttt trace-clone trace-exec		\
	trace-exec1 trace-fork libdl-simple

MAINTAINERCLEANFILES = Makefile.in
